--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-    <center><img src="/Programação WEB/Aula 4 30.8.23/Bday_project/Images/Bday.jpg" width="600" height="300" alt="Birthday and baloons"></center>
+    <center><img src="/VS CODE/Programação WEB/Aula 4 30.8.23/Bday_project/Images/Bday.jpg" width="600" height="300" alt="Birthday and baloons"></center>
     <hr>
     <h2>What to Bring:</h2>
     <ul>
@@ -14,5 +14,5 @@
         <li>Snacks</li>
     </ul>
     <h2>This is where you need to go:</h2>
-    <a href="https://www.google.com/maps/place/Rua+%C3%82ngelo+Cavichiolo,+50+-+Cajuru,+Curitiba+-+PR,+82930-260/@-25.459415,-49.2130691,17z/data=!3m1!4b1!4m6!3m5!1s0x94dce55081017705:0x6a674caa50707c39!8m2!3d-25.4594199!4d-49.2104942!16s%2Fg%2F11cpkdq15z?entry=ttu">Location</a>
+    <a href="https://www.google.com/maps/place/Est%C3%A1cio/@-25.4315439,-49.2433616,16.67z/data=!4m6!3m5!1s0x94dce5ad0c7032eb:0xfac2a5d17d0de97e!8m2!3d-25.4317116!4d-49.2412014!16s%2Fg%2F1tfrnh69?entry=ttu">Location</a>
 </body>
